<resources>
    <string name="app_name" translatable="false">DeckDraw</string>

    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_decks">Decks</string>
    <string name="menu_friends">Friends</string>
    <string name="toolbar_deckname">DeckName</string>

    <string name="log_in">Log in to continue</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_in_short">Log In</string>
    <string name="if_you_are_not_registered_register_now">If you are not registered, register now</string>
    <string name="app_logo">App logo</string>
    <string name="error_connection_not_found">Error: Connection not found</string>
    <string name="error_right_now_you_are_not_connected_to_a_network_try_again_later">Error: Right now you are not connected to a Network, try again later</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="create_acc">Create an account to start organizing your decks</string>
    <string name="toggle_password_visibility">Toggle Password Visibility</string>
    <string name="at_least_eight_characters">• At least 8 characters</string>
    <string name="at_least_one_uppercase_letter">• At least 1 uppercase letter</string>
    <string name="at_least_one_lowercase_letter">• At least 1 lowercase letter</string>
    <string name="at_least_one_number">• At least 1 number</string>
    <string name="at_least_one_special_character">• At least 1 special character</string>
    <string name="crear_mazo">Create deck</string>
    <string name="introduce_el_nombre_del_mazo">Write decks name</string>
    <string name="nombre_del_mazo">Deck name</string>
    <string name="formato">Format</string>
    <string name="comandante">Commander</string>
    <string name="portada_del_mazo">Deck front page</string>
    <string name="eliminar">Delete</string>
    <string name="editar">Edit</string>
    <string name="addcard_text">Add card</string>
    <string name="removecard_text">Remove card</string>
    <string name="zero_number" translatable="false">0</string>





    <!--Strings de los filtros de búsqueda -->
    <string name="hint_busqueda">Search</string>
ç    <string name="text_floating_button_busqueda">Search</string>
    <string name="red_mana_text">Red</string>
    <string name="blue_mana_text">Blue</string>
    <string name="green_mana_text">Green</string>
    <string name="white_mana_text">White</string>
    <string name="black_mana_text">Black</string>
    <string name="colorless_mana_text">Colorless</string>
    <string name="rarity_common_text">Common</string>
    <string name="rarity_uncommon_text">Uncommon</string>
    <string name="rarity_rare_text">Rare</string>
    <string name="rarity_special_text">Special</string>
    <string name="rarity_mythic_text">Mythic</string>
    <string name="rarity_bonus_text">Bonus</string>
    <string name="card_type_artifact_text">Artifact</string>
    <string name="card_type_battle_text">Battle</string>
    <string name="card_type_conspiracy_text">Conspiracy</string>
    <string name="card_type_creature_text">Creature</string>
    <string name="card_type_dungeon_text">Dungeon</string>
    <string name="card_type_emblem_text">Emblem</string>
    <string name="card_type_enchantment_text">Enchantment</string>
    <string name="card_type_hero_text">Hero</string>
    <string name="card_type_instant_text">Instant</string>
    <string name="card_type_kindred_text">Kindred</string>
    <string name="card_type_land_text">Land</string>
    <string name="card_type_phenomenon_text">Phenomenon</string>
    <string name="card_type_plane_text">Plane</string>
    <string name="card_type_planeswalker_text">Planeswalker</string>
    <string name="card_type_scheme_text">Scheme</string>
    <string name="card_type_sorcery_text">Sorcery</string>
    <string name="card_type_vanguard_text">Vanguard</string>

    <string name="user_icon">User Icon</string>
    <string name="user_profile">User Profile</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name= "ok" translatable="false">OK</string>
    <string name="name">Name</string>
    <string name="description">Description</string>

    <string name="mana_cost">Mana cost</string>
    <string name="artist">Artist</string>
    <string name="set_name">Set name</string>
    <string name="rarity">Rarity</string>
    <string name="type">Type</string>
    <string name="power">Power</string>
    <string name="toughness">Toughness</string>
    <string name="color">Color</string>


    <string name="mostrar">Show</string>
    <string name="copiar">Copy</string>
    <string name="helper_busqueda">Card name</string>
    <string name="filter_mana_type">Mana type</string>
    <string name="filter_rarity_type">Rarity</string>
    <string name="filter_card_type">Card type</string>
    <string name="your_decks">Your decks</string>
    <string name="save_changes">Save changes</string>
    <string name="ask_save_changes">Save changes before exiting?</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="changes_saved">Changes saved</string>
    <string name="changes_discarded">Changes discarded</string>
    <string name="duplicate_commander_toast">Can\'t have duplicate cards in commander</string>
    <string name="more_than_100">Can\'t have more than 100 cards in commander</string>
    <string name="more_than_4">"Can't have more than 4 duplicate cards in "</string>
    <string name="limit_60">Can\'t have more than 60 cards in</string>
    <string name="already_logged">User already logged</string>
    <string name="error_couldnt_login">Error: Couldn\'t log in</string>
    <string name="fill_fields">Please, fill all fields</string>
    <string name="success_register">User registered successfully</string>
    <string name="error_register">Error registering user</string>
    <string name="user_updated">User updated</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="enter_commander">Please enter a commander</string>
    <string name="enter_name">"Please enter a deck "</string>
    <string name="friend_list">Friend List</string>
    <string name="query_hint">Search decks...</string>
    <string name="friends_decks">"Decks of "</string>
    <string name="card_description">Selected card image</string>
    <string name="cancel">Cancel</string>
    <string name="error_saving">Error saving changes</string>
    <string name="show">Show</string>
    <string name="deck">"Deck "</string>
    <string name="copy_library">copied to your library</string>

    <string name="a_adir_amigo">Añadir amigo</string>
    <string name="id_de_amigo">ID de amigo</string>
    <string name="a_adir">Añadir</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>



</resources>