<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/BackgroundColor"
    tools:context=".ui.Activities.UserProfile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUP"
        style="@style/ToolBarLight"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/PrimaryColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="138dp"
        android:text="@string/user_profile"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUP">

    </TextView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="295dp"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/ic_usericon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUP"/>


    <EditText
        android:id="@+id/EditUsername"
        android:layout_width="210dp"
        android:layout_height="63dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="57dp"
        android:autofillHints="username"
        android:inputType="textAutoComplete"
        android:text="@string/username"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="210dp"
        android:layout_height="63dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="154dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="210dp"
        android:layout_height="63dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="154dp"
        android:autofillHints="password"
        android:backgroundTint="@color/PrimaryColor"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/TextColorPrimary"
        android:textColorHint="@color/TextColorSecondary"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditEmail" />

    <ImageView
        android:id="@+id/togglePasswordVisibilityUP"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/toggle_password_visibility"
        android:src="@drawable/ic_visibility"
        app:layout_constraintBottom_toBottomOf="@id/EditPassword"
        app:layout_constraintEnd_toEndOf="@id/EditPassword"
        app:layout_constraintTop_toTopOf="@id/EditPassword" />

    <Button
        android:id="@+id/UpdateButton"
        android:layout_width="129dp"
        android:layout_height="62dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="270dp"
        android:text="@string/update"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditPassword"/>

    <Button
        android:id="@+id/SignOut"
        android:layout_width="313dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="270dp"
        android:text="@string/sign_out"
        android:textColor="@color/ManaColorRed"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>